--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             <div class="col-md-5">
                 <h3>Small room</h3>
-                <p>Panorama of the small room. Closet </p>
+                <p>Panorama of the small room. Closet is smallish. </p>
             </div>
         </div>
         <!-- /.row -->
