--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Bathroom (1 of 1 1/2)</h3>
-                <p>A half-bath separates the two next rooms.</p>
+                <h3>Bathroom (1 of 2)</h3>
+                <p>This is the full bath. Another one separates the two next rooms.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -221,7 +221,7 @@
             </div>
             <div class="col-md-5">
                 <h3>Two rear rooms (front)</h3>
-                <p>View into one of two similar rooms, separated by the 1/2 bath. This room could fit a queen size bed, but it's not huge by any means.</p>
+                <p>View into one of two similar rooms, separated by the bathroom. This room could fit a queen size bed.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -249,7 +249,7 @@
             </div>
             <div class="col-md-5">
                 <h3>Two rear rooms (rear)</h3>
-                <p>View into rearmost room, almost identical in size to the last room, on the other side the 1/2 bath.</p>
+                <p>View into rearmost room, almost identical in size to the last room, on the other side the bathroom.</p>
             </div>
         </div>
         <!-- /.row -->
