--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">4br Apartment @ 24 Charlotte Street, BK
+                <h1 class="page-header">4br Apartment @ 24 Charlotte Street, BK ($3800)
                     <small>Inquiries: lippemfg attt gmail.com</small>
                 </h1>
             </div>
